--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 <div class="text-4xl font-bold gradient-text mb-4">FranceRH.com</div>
                 <p class="text-gray-600 mb-6">Ce domaine premium est idéal pour votre entreprise de ressources humaines en France. Profitez d'une présence en ligne optimale avec un nom de domaine mémorable et percutant.</p>
                 
-                <a href="https://www.godaddy.com/foresale/francerh.com" target="_blank" class="block mt-6 bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-3 px-6 rounded-lg font-bold hover:from-blue-700 hover:to-indigo-800 transition-all transform hover:scale-105">
+                <a href="https://www.godaddy.com/forsale/francerh.com" target="_blank" class="block mt-6 bg-gradient-to-r from-blue-600 to-indigo-700 text-white py-3 px-6 rounded-lg font-bold hover:from-blue-700 hover:to-indigo-800 transition-all transform hover:scale-105">
                     <i class="fas fa-shopping-cart mr-2"></i>Acheter maintenant sur GoDaddy
                 </a>
                 
